fixing tooltip
it was covering half text from bottom

--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ label {
   color: #fff;
   text-align: center;
   border-radius: 6px;
-  padding: 5px 0;
+  padding: 0px 0;
   
   /* Position the tooltip */
   position: absolute; 
